--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -5,7 +5,7 @@
 }
 
 .articles-display {
-  margin-top: 1rem;
+  margin-top: 0rem;
   flex-direction: column;
   justify-content: center;
   width: 50%;
